Bug 248340 - dolphin does not stop to ask for password, when pressing "cancel"
Summary: dolphin does not stop to ask for password, when pressing "cancel"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 249602 250885 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-19 09:16 UTC by H.H.
Modified: 2011-05-30 00:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2010-08-19 09:16:39 UTC
Version:           unspecified
OS:                Linux

I don't know if this is a problem of kio_sftp or dolphin. but when asked for a password, and I press cancel, the dialog appears again - 3 times. when leaving the tab, and activating it again, same again. 

after a "cancel" operation there should be no further dialogs, only on manual refresh (F5).

Reproducible: Always




OS: Linux (x86_64) release 2.6.27.25-0.1-default
Compiler: gcc
Comment 1 Peter Penz 2010-08-19 19:28:36 UTC
Thanks for the report. Could you please let us know which KDE version you are using?
Comment 2 H.H. 2010-08-19 20:46:37 UTC
yes, sorry, I use kde-4.5. 

why does the reporting-assistant not fill in the kde version by itself as in previous kde/bugzilla-versions?
Comment 3 Andreas Schneider 2010-08-19 21:57:07 UTC
Well, this is more or less how it works. The first time it asks for the password for the public key and if this doesn't work it tries keyboard interactive.
Comment 4 H.H. 2010-08-19 22:27:47 UTC
I don't understand. If the user wants to "cancel" authorization, it should really cancel. There should be a difference, if the user cancels, or if something other on authorization fails.
Comment 5 Andreas Schneider 2010-08-30 20:27:33 UTC
Could you be more specific about the password dialogs?

Are both identical?

If not what's the difference?
Comment 6 H.H. 2010-08-30 20:57:06 UTC
yes, they are both identical, to reproduce, simply open sftp for kde.org :-)

sftp://kde.org/

I am asked 3 times, although I cancel everytime.
Comment 7 H.H. 2010-08-30 21:00:03 UTC
why this is so annoying for me: my last dolphin session with multiple sftp tabs is restored at kde-start, and sometimes, I do not want to open all connections, and am asked 9 times for 3 tabs for example.
Comment 8 Andreas Schneider 2010-08-30 21:16:40 UTC
Does this happen with konqueror too?
Comment 9 Andreas Schneider 2010-08-30 21:28:44 UTC
If you enter the URL sftp://kde.org then dolphin does a 'listDir' on that directory. If you press 'cancel' dolphin, I don't understand why, calls 'stat'. That's the reason you get two dialog windows.

You can see set if you enable debut output of kio_sftp.

kio_sftp(12565) sftpProtocol::openConnection: User canceled, dlgResult =  false
kio_sftp(12565) sftpProtocol::closeConnection: closeConnection()

The connection is correctly closed ...
Comment 10 H.H. 2010-08-30 21:42:00 UTC
I doesn't happen with konqueror, so really a dolphin bug, as I originally reported?
Comment 11 Andreas Schneider 2010-08-31 16:08:16 UTC
The first sftp operation is normally a stat. You can see that with konqueror.

I think the tree view on the left side of dolphin is issuing the listDir call and the main part is calling stat. So it is fine if you enter correct credentials cause the second call can use them.

Assigning back to dolphin.
Comment 12 FiNeX 2010-09-12 16:04:32 UTC
*** Bug 250885 has been marked as a duplicate of this bug. ***
Comment 13 FiNeX 2010-09-12 16:04:35 UTC
*** Bug 249602 has been marked as a duplicate of this bug. ***
Comment 14 Dawit Alemayehu 2011-05-30 00:20:14 UTC
Git commit f5568a8eefb94b5df1d3809727839a89ce5e5f8f by Dawit Alemayehu.
Committed on 29/05/2011 at 20:47.
Pushed by adawit into branch 'KDE/4.6'.

Set the window on the directory lister created in ViewAccessor so that password
management can be handled properly.

BUG: 248340
FIXED-IN: 4.6.4
REVIEW: 101469

(cherry picked from commit 24e79c009b1530b5491940b727a989d4d0fbf434)

M  +5    -0    dolphin/src/views/dolphinview.cpp     

http://commits.kde.org/kde-baseapps/f5568a8eefb94b5df1d3809727839a89ce5e5f8f