Set the window on the directory lister created in ViewAccessor so that password management can be handled properly.

BUG: 248340
FIXED-IN: 4.6.4
REVIEW: 101469

(cherry picked from commit 24e79c009b1530b5491940b727a989d4d0fbf434)